# OOP_LB2

project/: CMakeLists.txt  README.md
project/backend/: CMakeLists.txt  ControllerRobot.cpp  ControllerRobot.hpp  GameEngine.cpp  GameEngine.hpp  JsonBuilder.cpp  JsonBuilder.hpp  Level.cpp  Level.hpp  LevelLoader.cpp  LevelLoader.hpp  RequestHandler.cpp  RequestHandler.hpp  Robot.cpp  Robot.hpp  Types.hpp  WorkerRobot.cpp  WorkerRobot.hpp  main.cpp
project/frontend/: client.py  editor.py  game_window.py  gui.py  menu.py  requirements.txt
project/frontend/levels/: Level2.json  level1.json  апв.json  арп.json
project/scripts/: Makefile  run.bat
